Step 4. Add the server for back end calls.
- added a .node-version file to make nvm & co aware of which version is required
- updated the tsconfig files so it can handle client & server properly

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,13 +2,14 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "./server",
+    "moduleResolution": "node16",
     "types": []
   },
   "files": [
-    "src/main.ts"
+    "server/main.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "server/**/*.d.ts"
   ]
 }
