--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "next.discovery",
   "version": "1.0.0",
   "description": "Code from the IGeLU Developers day 2023 presentation 'How to build the next discovery experience'",
+  "type": "module",
   "scripts": {
     "getdata": "node dataset/getDinosaurs.mjs",
     "senddatatoai21": "node dataset/sendToAI21.mjs",
     "updatemetadata": "node dataset/updateMetadata.mjs",
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start": "concurrently \"ng serve\" \"tsc -w\" \"nodemon --delay 2 --inspect --enable-source-maps ./dist/server/main.js\"",
+    "serveronly": "node ./dist/server/main.js",
+    "build": "concurrently \"ng build\" \"tsc\"",
+    "postbuild": "concurrently \"copyfiles .env dist/server/ \" \"copyfiles -u 1 './dist/jurassic.ai/**/*'  dist/server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,7 +32,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "body-parser": "^1.20.2",
+    "connect-history-api-fallback": "^2.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -45,6 +49,8 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.46.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -52,6 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
