Step 5. Add code so client can call server
- update angular ai service and add error handling
- add an angular proxy configuration so you can call the server from the angular development server

--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,9 @@
               "browserTarget": "jurassic.ai:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
