Updated readme with some more info

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,14 @@
-# Rename this file to .env and add your secret information
+## For local development, rename this file to .env and add your secret information
+## If you use a cloud hosting service, you could also set an environment variable in the dashboard of the hosting service, and not add the .env
+## if you have your own webserver somewhere, you could add the .env file, or choose to set them as environment variables of the operating system
+
+
+# add your AI21 API key here
 AI21_API_KEY=
+
+## the next two are optional, if you don't need them, remove them from your file
+
+# you can change the default port for the webserver
+PORT=
+# sometimes it can be needed to define the hostname to bind to, it can be done here
+HOST=
